--- a/LungTrackerWeb/src/app/researcher/researcher-map/leaflet-map/leaflet-map.component.html
+++ b/LungTrackerWeb/src/app/researcher/researcher-map/leaflet-map/leaflet-map.component.html
@@ -1,4 +1,6 @@
 <div class="map-container">
+  <h3> Mapa con la residencia actual de los pacientes y la exposición con el radón.</h3>
+
   <div class="map-frame">
     <div id="map"></div>
   </div>
