--- a/LungTrackerWeb/src/app/researcher/researcher-map/leaflet-map/leaflet-map.component.css
+++ b/LungTrackerWeb/src/app/researcher/researcher-map/leaflet-map/leaflet-map.component.css
@@ -1,9 +1,14 @@
 .map-container {
-  height: 500px;
-  width: 80%;
+  height: 600px;
+  width: 70%;
   margin: auto;
   margin-top: 50px;
   margin-bottom: 50px;
+}
+
+h3{
+  text-align: center;
+  font-weight: bold;
 }
 
 .map-frame {
