questionario familiar done

--- a/LungTrackerWeb/src/app/home/home.component.html
+++ b/LungTrackerWeb/src/app/home/home.component.html
@@ -13,7 +13,7 @@
     <div class ="principal-text"   fxLayout="column" fxLayoutAlign= "center start" fxLayoutAlign.lt-md="center center" fxFlex="40">
       <h1 class="welcome-text">¡Bienvenidos a
         LungTracker!</h1>
-      <p class="text-header">¿Estás luchando contra el cáncer de pulmón o ya lo has batido?
+      <p class="text-header">¿Eres o has sido paciente de cáncer de pulmón?
           <br>Ayúdanos en la recopilación de información mediante el siguiente formulario:</p>
 
       <!-- <button mat-raised-button class="card" (click)="lungForm()" >Participa</button> -->
