--- a/LungTrackerWeb/src/app/app.component.html
+++ b/LungTrackerWeb/src/app/app.component.html
@@ -17,11 +17,11 @@
     </div>
     <div fxLayout="row" fxLayoutAlign="start center" class="drawer-menu-item" (click)="goToMaps()" >
       <mat-icon class="icon-element">map</mat-icon>
-      <span class="text-element">Mapas</span>
+      <span class="text-element">Mapa incidencia</span>
     </div>
-    <div fxLayout="row" fxLayoutAlign="start center" class="drawer-menu-item" (click)="printSomething()" >
-      <mat-icon class="icon-element">info</mat-icon> 
-      <span class="text-element">Información</span>
+    <div fxLayout="row" fxLayoutAlign="start center" class="drawer-menu-item" (click)="goToInformation()" >
+      <mat-icon class="icon-element">map</mat-icon> 
+      <span class="text-element">Mapa exposición</span>
     </div>
     <mat-divider style="margin-top: 15px;"></mat-divider>
     <h3 class="second-title-drawer">Investigadores</h3>
