--- a/LungTrackerWeb/src/app/maps/maps.component.html
+++ b/LungTrackerWeb/src/app/maps/maps.component.html
@@ -1,10 +1,11 @@
 <div style="width: 100%">
   <div class="header-bar" fxLayout="column" fxLayoutAlign="center center" >
     <h1 class="welcome-text">Mapas de incidencia y descarga de datos</h1>
-    <h2 class="light-text">Aquí podrás observar los mapas de incidencia del cáncer en España</h2>
   </div>
   <div fxLayout="column" class="flex-content">
     <iframe width="1080" height="720" frameborder="0" scrolling="no" allowfullscreen src="https://observatorio.contraelcancer.es/gis/Dimensiones_/?extent=-2250999.7288%2C4261987.5749%2C980146.3309%2C5710010.6387%2C102100"></iframe>
+    <p>Fuente: Observatorio Contra el Cáncer. </p>
   </div>
+  
 </div>
 
