Change Oriol home portrait

--- a/LungTrackerWeb/src/app/home/home.component.html
+++ b/LungTrackerWeb/src/app/home/home.component.html
@@ -136,7 +136,7 @@
     <img
       width="150"
       alt="foto_oriol"
-      src="assets/images/oriolviladrosa.jpeg"
+      src="assets/images/oriolviladrosa2.png"
       class="user-photo"  />
     <h6>Oriol Viladrosa</h6>
 
