--- a/LungTrackerWeb/src/app/lung-form/lung-form-questions/lung-form-questions.component.html
+++ b/LungTrackerWeb/src/app/lung-form/lung-form-questions/lung-form-questions.component.html
@@ -17,9 +17,9 @@
       <p class="nsnc-informer">Para cualquier respuesta que desconozcas encontrarás la opción <i>NS/NC</i>.</p>
     </div>
     <mat-horizontal-stepper  #stepper>
-
-
-        <mat-step [stepControl]="demographicDetails" [editable]="true">
+      
+      
+      <mat-step [stepControl]="demographicDetails" [editable]="true">
             <div class="questions-div">
               <form [formGroup]="demographicDetails">
                   <h2>Información personal</h2>
@@ -157,7 +157,7 @@
                     <input matInput formControlName="yearDiagnose" required type="number">
                   </mat-form-field>
                   <div fxFlex="5" fxHide.lt-md="true"></div>
-
+  
                   <mat-form-field appearance="outline" fxFlex="100" fxFlex.gt-sm="30">
                     <mat-label>Tipo de cáncer</mat-label>
                     <select  matNativeControl  formControlName="cancerType" matInput (change)="enableOtherCancerField()">
@@ -165,15 +165,15 @@
                       <option *ngFor="let t of cancerTypes" [ngValue]="t">{{t}}</option>
                     </select>
                   </mat-form-field>
-
+  
                   <div fxFlex="5" fxHide.lt-md="true"></div>
-
+  
                   <mat-form-field appearance="outline" fxFlex="100" fxFlex.gt-sm="30">
                     <mat-label>Otros</mat-label>
                     <input matInput formControlName="otherCancerType" type="text">
                   </mat-form-field>
                 </div>
-
+  
                 <div fxLayout="column" fxLayout.gt-sm="row">
                   <mat-form-field appearance="outline" fxFlex="100" fxFlex.gt-sm="30">
                     <mat-label>Subtipo de Cáncer (Célula no pequeña)</mat-label>
@@ -182,15 +182,15 @@
                       <option *ngFor="let t of nonMicrocyticCancerSubtypes" [ngValue]="t">{{t}}</option>
                     </select>
                   </mat-form-field>
-
+  
                   <div fxFlex="5" fxHide.lt-md="true"></div>
-
+  
                   <mat-form-field appearance="outline" fxFlex="100" fxFlex.gt-sm="30">
                     <mat-label>Otros</mat-label>
                     <input matInput formControlName="otherNonMicrocyticCancerType" type="text">
                   </mat-form-field>
                 </div>
-
+  
                 <h3>¿Sabe si se ha detectado alguna alteración molecular en su tumor?</h3>
                 <div fxLayout="column" fxLayout.gt-sm="row">
                   <mat-form-field appearance="outline" fxFlex="100" fxFlex.gt-sm="30">
@@ -268,13 +268,13 @@
                       </select>
                     </mat-form-field>
                     <div fxFlex="5" fxHide.lt-md="true"></div>
-
+  
                     <mat-form-field appearance="outline" fxFlex.gt-sm="30">
                       <mat-label>Año de la metástasis</mat-label>
                       <input matInput formControlName="metastasisYear" required type="number">
                     </mat-form-field>
                     <div fxFlex="5" fxHide.lt-md="true"></div>
-
+  
                     <mat-form-field appearance="outline" fxFlex.gt-sm="30">
                       <mat-label>Tratamiento</mat-label>
                       <mat-select multiple formControlName="metastatisTreatment" (selectionChange)="enableOtherMetastasis()">
@@ -282,13 +282,13 @@
                       </mat-select>
                     </mat-form-field>
                   </div>
-
+  
                   <div fxLayout="column">
                     <div fxLayout="column" fxLayout.gt-sm="row">
                       <mat-checkbox formControlName="isClinicalTrial">El tratamiento ha sido un ensayo clínico.</mat-checkbox>
                     </div>
                   </div>
-
+  
                   <mat-form-field appearance="outline" >
                     <mat-label>Otros tratamientos</mat-label>
                     <input matInput formControlName="otherMetastasisTreatment" type="text">
@@ -304,14 +304,14 @@
                     </select>
                   </mat-form-field>
                   <div fxFlex="5" fxHide.lt-md="true"></div>
-
+  
                   <mat-form-field appearance="outline" fxFlex.gt-sm="55">
                     <mat-label>Otros tratamientos</mat-label>
                     <input matInput formControlName="otherNonSurgeryTreatment" type="text">
                   </mat-form-field>
                 </div>
-
-
+  
+  
                 <h3>¿Le han diagnosticado alguna enfermedad pulmonar previa al cáncer de pulmón?</h3>
                 <div fxLayout="column">
                   <div fxLayout="row">
@@ -322,9 +322,9 @@
                       </mat-select>
                     </mat-form-field>
                     <div fxFlex="45" fxHide.lt-md="true"></div>
-
+  
                   </div>
-
+  
                   <div fxLayout="row">
                     <mat-form-field appearance="outline" fxFlex.gt-sm="55" fxFlex="100">
                       <mat-label>Otros</mat-label>
@@ -332,20 +332,21 @@
                     </mat-form-field>
                     <div fxFlex="45" fxHide.lt-md="true"></div>
                   </div>
-
+  
                 </div>
-
-
+  
+  
                 <h2>Datos de otros tumores</h2>
                 <h3>Aparte del cáncer de pulmón, ¿se le ha diagnosticado otro tipo de cáncer?
                 </h3>
                 <mat-form-field appearance="outline" >
                   <mat-label>Respuesta</mat-label>
-                  <select  matNativeControl  formControlName="additionalDiagnoseAnswer" matInput>
+                  <select  matNativeControl  formControlName="additionalDiagnoseAnswer" matInput (change) ="addCancerData()">
                     <option value="" disabled>Indica la respuesta</option>
                     <option *ngFor="let t of surgeryAnswers" [ngValue]="t">{{t}}</option>
                   </select>
                 </mat-form-field>
+                
                 <div fxLayout="column">
                   <span>Para cada tipo de cáncer que haya experimentado añada una pestaña y rellene los datos relacionados.</span>
                   <div fxLayout="row" fxLayoutAlign="center center">
@@ -353,8 +354,8 @@
                     <button mat-button type="button" (click)="deleteCancerItem()">Eliminar</button>
                   </div>
                 </div>
-
-
+  
+  
                 <div formArrayName="otherCancers"
                   *ngFor="let item of getOtherCancers['controls']; let i = index;"
                 class="cancerType">
@@ -405,10 +406,10 @@
                         </select>
                       </mat-form-field>
                     </div>
-
+  
                   </div>
                 </div>
-
+  
                 <div fxLayout="row" fxLayoutAlign="space-evenly center" style="margin-top: 50px;">
                   <button mat-raised-button matStepperPrevious (click)="this.previous()">Anterior</button>
                   <button mat-raised-button matStepperNext (click)="this.next()" [disabled]="this.clinicDetails.invalid">Siguiente</button>
@@ -446,8 +447,8 @@
                   <input matInput formControlName="endSmokeYear" type="number">
                 </mat-form-field>
               </div>
-
-
+  
+  
               <h3>¿Ha fumado otros productos?</h3>
               <div fxLayout="column">
                 <div fxLayout="row">
@@ -466,9 +467,9 @@
                   </mat-form-field>
                   <div fxFlex="45" fxHide.lt-md="true"></div>
                 </div>
-
+  
               </div>
-
+  
               <h2>Localización</h2>
               <h3>¿Reside o trabaja a menos de 1km de una autovía/autopista?</h3>
               <mat-form-field appearance="outline" >
@@ -488,7 +489,7 @@
                     </mat-select>
                   </mat-form-field>
                   <div fxFlex="45" fxHide.lt-md="true"></div>
-
+  
                 </div>
                 <div fxLayout="row">
                   <mat-form-field appearance="outline" fxFlex="100" fxFlex.gt-sm="55">
@@ -497,7 +498,7 @@
                   </mat-form-field>
                   <div fxFlex="45" fxHide.lt-md="true"></div>
                 </div>
-
+  
               </div>
               <div fxLayout="row" fxLayoutAlign="space-evenly center" style="margin-top: 50px;">
                 <button mat-raised-button matStepperPrevious (click)="this.previous()">Anterior</button>
@@ -545,11 +546,11 @@
                   <input matInput formControlName="initialYearCurrentJob" required type="number" >
                 </mat-form-field>
                 <div fxFlex="5" fxHide.lt-md="true"></div>
-
+  
                 <mat-checkbox formControlName="currentJobProtections" color="primary">¿Utilizaba medidas de protección (mascarillas, guantes…)?</mat-checkbox>
-
+  
               </div>
-
+  
               <h3>¿Has tenido trabajos previos?</h3>
                 <mat-form-field appearance="outline">
                   <mat-label>En caso afirmativo, ¿cuántos?</mat-label>
@@ -558,20 +559,20 @@
                     <option *ngFor="let w of numberPreviousJobs" [ngValue]="w">{{w}}</option>
                   </select>
                 </mat-form-field>
-
-
-
+  
+  
+  
             <div fxLayout="column" style="margin-top: 50px;">
                 <span>Indica los 2 trabajos de más duración.</span>
               </div>
-
+  
               <div formArrayName="otherJobs"
                   *ngFor="let item of getOtherJob['controls']; let i = index;"
                   class="cancerType">
                   <div [formGroupName]="i" >
                     <h3>Trabajo {{i+1}}</h3>
                     <div fxLayout="column">
-
+  
                       <div fxLayout="row">
                         <mat-form-field appearance="outline" fxFlex="100" fxFlex.gt-sm="50">
                           <mat-label>Puesto de trabajo</mat-label>
@@ -590,9 +591,9 @@
                           </mat-autocomplete>
                         </mat-form-field>
                         <div fxFlex="50" fxHide.lt-md="true"></div>
-
+  
                       </div>
-
+  
                       <div fxlayout="row">
                         <mat-form-field appearance="outline" fxFlex="100" fxFlex.gt-sm="50">
                           <mat-label>Año inicial</mat-label>
@@ -611,8 +612,8 @@
                   </div>
                 </div>
               </div>
-
-
+  
+  
               <div fxLayout="row" fxLayoutAlign="space-evenly center" style="margin-top: 50px;">
               <button mat-raised-button matStepperPrevious (click)="this.previous()">Anterior</button>
               <button mat-raised-button matStepperNext (click)="this.next()" [disabled]="this.jobDetails.invalid">Siguiente</button>
@@ -631,9 +632,9 @@
                   <option value="" disabled>Respuesta</option>
                   <option *ngFor="let t of familyAnswers" [ngValue]="t">{{t}}</option>
                 </select>
-
+  
               </mat-form-field>
-
+  
               <h3>¿Cuántos miembros?</h3>
               <mat-form-field appearance="outline">
                 <mat-label>Respuesta</mat-label>
@@ -641,9 +642,9 @@
                   <option value="" disabled>Respuesta</option>
                   <option *ngFor="let t of familyNumberAnswers" [ngValue]="t">{{t}}</option>
                 </select>
-
+  
               </mat-form-field>
-
+  
               <div fxLayout="column" style="margin-top: 50px;">
                 <span>Para cada familiar diagnosticado que haya tenido rellene los datos relacionados.</span>
               </div>
@@ -663,14 +664,14 @@
                     </mat-form-field>
                     <div fxFlex="10"></div>
                     <mat-checkbox formControlName="isDead" color="primary" (change)="isDeadEnables(i)">¿Ha fallecido?</mat-checkbox>
-
+  
                   </div>
-
+  
                   <mat-form-field appearance="outline" *ngIf="!getFamilyForm(i).get('isDead')?.value">
                     <mat-label>Edad</mat-label>
                     <input matInput formControlName="age" required type="number">
                   </mat-form-field>
-
+  
                   <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign.gt-sm="start center">
                     <mat-form-field appearance="outline" *ngIf="getFamilyForm(i).get('isDead')?.value">
                       <mat-label>Edad de defunción</mat-label>
@@ -679,8 +680,8 @@
                     <div fxFlex="10"></div>
                     <mat-checkbox style="margin-bottom: 20px" formControlName="deadCause" color="primary" *ngIf="getFamilyForm(i).get('isDead')?.value">Fallecimiento debido al cáncer</mat-checkbox>
                   </div>
-
-
+  
+  
                   <h3>Datos clínicos</h3>
                   <div fxLayout="column">
                     <div fxLayout="row" fxLayoutAlign="start center">
@@ -697,8 +698,8 @@
                         <input matInput formControlName="otherCancerType" type="text">
                       </mat-form-field>
                     </div>
-
-
+  
+  
                     <span>¿Ha desarrollado metástasis?</span>
                     <div fxLayout="row">
                       <mat-form-field appearance="outline" fxFlex="100" fxFlex.gt-sm="30">
@@ -711,10 +712,10 @@
                       <div fxFlex="70" fxHide.lt-md="true"></div>
                     </div>
                   </div>
-
+  
                 </div>
               </div>
-
+  
               <div style="width: 100%; margin-top: 50px;" fxLayout="row" fxLayoutAlign="center center">
                 <button mat-raised-button mat-button (click)="this.submitForm()" [disabled]="this.familyDetails.invalid || loadingSubmit" color="primary">
                   <span *ngIf="!loadingSubmit">Enviar Formulario</span>
@@ -723,6 +724,10 @@
             </form>
           </div>
         </mat-step>
+        
+        
+        
+        
 
 
 
